Removed much of the shared classes from OT extension